Source/eu.modelwriter.core.alloyinecore/src/main/java/eu/modelwriter/core/alloyinecore/packageimport/ImportsParser.java
// Generated from /home/ferhat/IdeaProjects/eu.modelwriter.core.alloyinecore/src/main/java/eu/modelwriter/core/alloyinecore/packageimport/Imports.g4 by ANTLR 4.6
package eu.modelwriter.core.alloyinecore.packageimport;

import eu.modelwriter.core.alloyinecore.structure.base.Element;
import eu.modelwriter.core.alloyinecore.structure.imports.ImportedPackage;
import eu.modelwriter.core.alloyinecore.structure.imports.ImportedClass;
import eu.modelwriter.core.alloyinecore.structure.imports.ImportedInterface;
import eu.modelwriter.core.alloyinecore.structure.imports.ImportedDataType;
import eu.modelwriter.core.alloyinecore.structure.imports.ImportedEnum;
import eu.modelwriter.core.alloyinecore.structure.model.Import;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ImportsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, INT=59, IDENTIFIER=60, 
		DOUBLE_QUOTED_STRING=61, SINGLE_QUOTED_STRING=62, ML_SINGLE_QUOTED_STRING=63, 
		MULTILINE_COMMENT=64, SINGLELINE_COMMENT=65, WS=66, ANY=67;
	public static final int
		RULE_importedFile = 0, RULE_iPackage = 1, RULE_iClassifier = 2, RULE_iClass = 3, 
		RULE_iDataType = 4, RULE_visibility = 5, RULE_block = 6, RULE_templateSignature = 7, 
		RULE_iTypeParameter = 8, RULE_iGenericType = 9, RULE_iGenericTypeArgument = 10, 
		RULE_iGenericWildcard = 11, RULE_pathName = 12, RULE_segment = 13, RULE_integer = 14, 
		RULE_unrestrictedName = 15, RULE_identifier = 16;
	public static final String[] ruleNames = {
		"importedFile", "iPackage", "iClassifier", "iClass", "iDataType", "visibility", 
		"block", "templateSignature", "iTypeParameter", "iGenericType", "iGenericTypeArgument", 
		"iGenericWildcard", "pathName", "segment", "integer", "unrestrictedName", 
		"identifier"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'package'", "':'", "'='", "'{'", "'}'", "';'", "'abstract'", "'class'", 
		"'interface'", "'extends'", "','", "'datatype'", "'enum'", "'public'", 
		"'protected'", "'private'", "'<'", "'>'", "'&'", "'?'", "'super'", "'::'", 
		"'@'", "'.'", "'attribute'", "'body'", "'callable'", "'composes'", "'definition'", 
		"'derivation'", "'derived'", "'ensure'", "'id'", "'import'", "'initial'", 
		"'key'", "'model'", "'operation'", "'ordered'", "'postcondition'", "'precondition'",
		"'primitive'", "'property'", "'readonly'", "'reference'", "'require'", 
		"'resolve'", "'static'", "'throws'", "'transient'", "'unique'", "'unsettable'", 
		"'volatile'", "'invariant'", "'literal'", "'serializable'", "'annotation'", 
		"'model'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "INT", 
		"IDENTIFIER", "DOUBLE_QUOTED_STRING", "SINGLE_QUOTED_STRING", "ML_SINGLE_QUOTED_STRING", 
		"MULTILINE_COMMENT", "SINGLELINE_COMMENT", "WS", "ANY"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Imports.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	private Element owningElement;

	public ImportsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ImportedFileContext extends ParserRuleContext {
		public Element owner;
		public List<IPackageContext> iPackage() {
			return getRuleContexts(IPackageContext.class);
		}
		public IPackageContext iPackage(int i) {
			return getRuleContext(IPackageContext.class,i);
		}
		public ImportedFileContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ImportedFileContext(ParserRuleContext parent, int invokingState, Element owner) {
			super(parent, invokingState);
			this.owner = owner;
		}
		@Override public int getRuleIndex() { return RULE_importedFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImportsListener ) ((ImportsListener)listener).enterImportedFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImportsListener ) ((ImportsListener)listener).exitImportedFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImportsVisitor ) return ((ImportsVisitor<? extends T>)visitor).visitImportedFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportedFileContext importedFile(Element owner) throws RecognitionException {
		ImportedFileContext _localctx = new ImportedFileContext(_ctx, getState(), owner);
		enterRule(_localctx, 0, RULE_importedFile);
		owningElement=owner;
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(34);
					matchWildcard();
					}
					} 
				}
				setState(39);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__13) | (1L << T__14) | (1L << T__15))) != 0)) {
				{
				{
				setState(40);
				iPackage(owningElement);
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IPackageContext extends ParserRuleContext {
		public Element owner;
		public ImportedPackage current;
		public UnrestrictedNameContext name;
		public Token nsURI;
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public UnrestrictedNameContext unrestrictedName() {
			return getRuleContext(UnrestrictedNameContext.class,0);
		}
		public TerminalNode SINGLE_QUOTED_STRING() { return getToken(ImportsParser.SINGLE_QUOTED_STRING, 0); }
		public VisibilityContext visibility() {
			return getRuleContext(VisibilityContext.class,0);
		}
		public List<IClassifierContext> iClassifier() {
			return getRuleContexts(IClassifierContext.class);
		}
		public IClassifierContext iClassifier(int i) {
			return getRuleContext(IClassifierContext.class,i);
		}
		public List<IPackageContext> iPackage() {
			return getRuleContexts(IPackageContext.class);
		}
		public IPackageContext iPackage(int i) {
			return getRuleContext(IPackageContext.class,i);
		}
		public IPackageContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public IPackageContext(ParserRuleContext parent, int invokingState, Element owner) {
			super(parent, invokingState);
			this.owner = owner;
		}
		@Override public int getRuleIndex() { return RULE_iPackage; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImportsListener ) ((ImportsListener)listener).enterIPackage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImportsListener ) ((ImportsListener)listener).exitIPackage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImportsVisitor ) return ((ImportsVisitor<? extends T>)visitor).visitIPackage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IPackageContext iPackage(Element owner) throws RecognitionException {
		IPackageContext _localctx = new IPackageContext(_ctx, getState(), owner);
		enterRule(_localctx, 2, RULE_iPackage);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13) | (1L << T__14) | (1L << T__15))) != 0)) {
				{
				setState(46);
				visibility();
				}
			}

			setState(49);
			match(T__0);
			setState(50);
			((IPackageContext)_localctx).name = unrestrictedName();
			((IPackageContext)_localctx).current =  new ImportedPackage(_localctx);
			setState(52);
			match(T__1);
			setState(53);
			identifier();
			setState(54);
			match(T__2);
			setState(55);
			((IPackageContext)_localctx).nsURI = match(SINGLE_QUOTED_STRING);
			setState(67);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				{
				setState(56);
				match(T__3);
				setState(62);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						setState(60);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
						case 1:
							{
							setState(57);
							iClassifier(_localctx.current);
							}
							break;
						case 2:
							{
							setState(58);
							iPackage(_localctx.current);
							}
							break;
						case 3:
							{
							setState(59);
							matchWildcard();
							}
							break;
						}
						} 
					}
					setState(64);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
				setState(65);
				match(T__4);
				}
				break;
			case T__5:
				{
				setState(66);
				match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
			_ctx.stop = _input.LT(-1);
			if(owner != null) owner.addOwnedElement(_localctx.current); else owningElement= _localctx.current;
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IClassifierContext extends ParserRuleContext {
		public Element owner;
		public IClassContext iClass() {
			return getRuleContext(IClassContext.class,0);
		}
		public IDataTypeContext iDataType() {
			return getRuleContext(IDataTypeContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public IClassifierContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public IClassifierContext(ParserRuleContext parent, int invokingState, Element owner) {
			super(parent, invokingState);
			this.owner = owner;
		}
		@Override public int getRuleIndex() { return RULE_iClassifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImportsListener ) ((ImportsListener)listener).enterIClassifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImportsListener ) ((ImportsListener)listener).exitIClassifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImportsVisitor ) return ((ImportsVisitor<? extends T>)visitor).visitIClassifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IClassifierContext iClassifier(Element owner) throws RecognitionException {
		IClassifierContext _localctx = new IClassifierContext(_ctx, getState(), owner);
		enterRule(_localctx, 4, RULE_iClassifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(69);
				iClass(_localctx.owner);
				}
				break;
			case 2:
				{
				setState(70);
				iDataType(_localctx.owner);
				}
				break;
			}
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				{
				setState(73);
				block();
				}
				break;
			case T__5:
				{
				setState(74);
				match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IClassContext extends ParserRuleContext {
		public Element owner;
		public ImportedClass current;
		public Token isAbstract;
		public Token isClass;
		public Token isInterface;
		public UnrestrictedNameContext name;
		public UnrestrictedNameContext unrestrictedName() {
			return getRuleContext(UnrestrictedNameContext.class,0);
		}
		public VisibilityContext visibility() {
			return getRuleContext(VisibilityContext.class,0);
		}
		public TemplateSignatureContext templateSignature() {
			return getRuleContext(TemplateSignatureContext.class,0);
		}
		public List<IGenericTypeContext> iGenericType() {
			return getRuleContexts(IGenericTypeContext.class);
		}
		public IGenericTypeContext iGenericType(int i) {
			return getRuleContext(IGenericTypeContext.class,i);
		}
		public IClassContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public IClassContext(ParserRuleContext parent, int invokingState, Element owner) {
			super(parent, invokingState);
			this.owner = owner;
		}
		@Override public int getRuleIndex() { return RULE_iClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImportsListener ) ((ImportsListener)listener).enterIClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImportsListener ) ((ImportsListener)listener).exitIClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImportsVisitor ) return ((ImportsVisitor<? extends T>)visitor).visitIClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IClassContext iClass(Element owner) throws RecognitionException {
		IClassContext _localctx = new IClassContext(_ctx, getState(), owner);
		enterRule(_localctx, 6, RULE_iClass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13) | (1L << T__14) | (1L << T__15))) != 0)) {
				{
				setState(77);
				visibility();
				}
			}

			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
			case T__7:
				{
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__6) {
					{
					setState(80);
					((IClassContext)_localctx).isAbstract = match(T__6);
					}
				}

				setState(83);
				((IClassContext)_localctx).isClass = match(T__7);
				}
				break;
			case T__8:
				{
				setState(84);
				((IClassContext)_localctx).isInterface = match(T__8);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(87);
			((IClassContext)_localctx).name = unrestrictedName();
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(88);
				templateSignature();
				}
			}

			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(91);
				match(T__9);
				setState(92);
				iGenericType();
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__10) {
					{
					{
					setState(93);
					match(T__10);
					setState(94);
					iGenericType();
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			if (((IClassContext)_localctx).isInterface!=null) ((IClassContext)_localctx).current =  new ImportedInterface(_localctx); else ((IClassContext)_localctx).current =  new ImportedClass(_localctx);
			}
			_ctx.stop = _input.LT(-1);
			owner.addOwnedElement(_localctx.current);
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IDataTypeContext extends ParserRuleContext {
		public Element owner;
		public ImportedDataType current;
		public Token isDataType;
		public Token isEnum;
		public UnrestrictedNameContext name;
		public Token instanceClassName;
		public UnrestrictedNameContext unrestrictedName() {
			return getRuleContext(UnrestrictedNameContext.class,0);
		}
		public VisibilityContext visibility() {
			return getRuleContext(VisibilityContext.class,0);
		}
		public TemplateSignatureContext templateSignature() {
			return getRuleContext(TemplateSignatureContext.class,0);
		}
		public TerminalNode SINGLE_QUOTED_STRING() { return getToken(ImportsParser.SINGLE_QUOTED_STRING, 0); }
		public IDataTypeContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public IDataTypeContext(ParserRuleContext parent, int invokingState, Element owner) {
			super(parent, invokingState);
			this.owner = owner;
		}
		@Override public int getRuleIndex() { return RULE_iDataType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImportsListener ) ((ImportsListener)listener).enterIDataType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImportsListener ) ((ImportsListener)listener).exitIDataType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImportsVisitor ) return ((ImportsVisitor<? extends T>)visitor).visitIDataType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IDataTypeContext iDataType(Element owner) throws RecognitionException {
		IDataTypeContext _localctx = new IDataTypeContext(_ctx, getState(), owner);
		enterRule(_localctx, 8, RULE_iDataType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13) | (1L << T__14) | (1L << T__15))) != 0)) {
				{
				setState(104);
				visibility();
				}
			}

			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
				{
				setState(107);
				((IDataTypeContext)_localctx).isDataType = match(T__11);
				}
				break;
			case T__12:
				{
				setState(108);
				((IDataTypeContext)_localctx).isEnum = match(T__12);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(111);
			((IDataTypeContext)_localctx).name = unrestrictedName();
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(112);
				templateSignature();
				}
			}

			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(115);
				match(T__1);
				setState(116);
				((IDataTypeContext)_localctx).instanceClassName = match(SINGLE_QUOTED_STRING);
				}
			}

			if (((IDataTypeContext)_localctx).isDataType!=null) ((IDataTypeContext)_localctx).current =  new ImportedDataType(_localctx); else ((IDataTypeContext)_localctx).current =  new ImportedEnum(_localctx);
			}
			_ctx.stop = _input.LT(-1);
			owner.addOwnedElement(_localctx.current);
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VisibilityContext extends ParserRuleContext {
		public VisibilityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_visibility; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImportsListener ) ((ImportsListener)listener).enterVisibility(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImportsListener ) ((ImportsListener)listener).exitVisibility(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImportsVisitor ) return ((ImportsVisitor<? extends T>)visitor).visitVisibility(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VisibilityContext visibility() throws RecognitionException {
		VisibilityContext _localctx = new VisibilityContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_visibility);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13) | (1L << T__14) | (1L << T__15))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImportsListener ) ((ImportsListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImportsListener ) ((ImportsListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImportsVisitor ) return ((ImportsVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(T__3);
			setState(128);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					setState(126);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
					case 1:
						{
						setState(124);
						block();
						}
						break;
					case 2:
						{
						setState(125);
						matchWildcard();
						}
						break;
					}
					} 
				}
				setState(130);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			}
			setState(131);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TemplateSignatureContext extends ParserRuleContext {
		public List<ITypeParameterContext> iTypeParameter() {
			return getRuleContexts(ITypeParameterContext.class);
		}
		public ITypeParameterContext iTypeParameter(int i) {
			return getRuleContext(ITypeParameterContext.class,i);
		}
		public TemplateSignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_templateSignature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImportsListener ) ((ImportsListener)listener).enterTemplateSignature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImportsListener ) ((ImportsListener)listener).exitTemplateSignature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImportsVisitor ) return ((ImportsVisitor<? extends T>)visitor).visitTemplateSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemplateSignatureContext templateSignature() throws RecognitionException {
		TemplateSignatureContext _localctx = new TemplateSignatureContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_templateSignature);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(T__16);
			setState(134);
			iTypeParameter();
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__10) {
				{
				{
				setState(135);
				match(T__10);
				setState(136);
				iTypeParameter();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(142);
			match(T__17);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
